# Grok16

./: .gitignore  ARCHITECTURE.md  CMakePresets.json  CREDITS.md  Dockerfile  MIGRATION-5.0.md  NOTICE  PERFORMANCE.md  README.md  RELEASE-0.9c.md  RELEASE-0.9d.md  RELEASE-0.9e.md  RELEASE-1.0.md  RELEASE-2.0.md  RELEASE-3.0.md  RELEASE-4.0.md  RELEASE-4.2.md  RELEASE-4.7.1.md  RELEASE-4.7.md  RELEASE-4.9.md  RELEASE-5.0.1.md  RELEASE-5.0.md  RELEASE-5.1.0.md  RELEASE-5.2.0.md  RELEASE-5.3.0.md  RELEASE-5.3.1.md  RELEASE-5.3.2.md  SOURCE-OFFER.txt  SPEED-BENCH-REPORT.md  c64-classic.html  c64-ultimate.html  c64.html  cmake-linking.html  concepts.html  field-chip-battery-panel.json  field-chip-battery.json  field-chips-core-panel.json  field-chips-core.json  field-chips-plate-stack-panel.json  field-chips-plate-stack.json  (+45 more)
.nexus-release-state/: field-chip-battery-panel.json  field-chip-battery.json  field-combinatorics-comb-ledger.jsonl  field-combinatorics-comb-panel.json  field-combinatorics-engine-lock.json  field-combinatorics-last-good-panel.json  field-combinatorics-lock-ledger.jsonl  field-combinatorics-reject-ledger.jsonl  field-combinatorics-runtime.json  field-combinatorics-threat-panel.json  field-combinatronic-balance-panel.json  field-combinatronic-balance-table.json  field-g16-universal-combinatronic-panel.json  field-g16-universal-combinatronic.json  field-program-combinatronic-panel.json  field-program-combinatronic.json  field-voltage-regulation-panel.json  g16-ideal-compile.json  g16-power-sort-bench.json  g16-power-sort-ledger.jsonl  g16-power-sort-panel.json  g16-power-sort-plate.json  ironclad-field-sanity-ledger.jsonl  ironclad-field-sanity-panel.json  ironclad-spatial-existence-ledger.jsonl  operator-location.json  root-sovereign-covenant.json  root-sovereign-vigil.jsonl  sovereign-linear-time.json  sovereign-time-receipts.jsonl  threat-ledger.jsonl
cmake/: g16-field-mandate.cmake  g16-linker-mandate.cmake  grok16-chips-field-opt.cmake  grok16-field-queen-rtx.cmake  grok16-field.cmake  grok16-profile-ai.cmake  grok16-profile-ammoos.cmake  grok16-profile-belt-2.cmake  grok16-profile-field-opt.cmake  grok16-profile-field-physics.cmake  grok16-profile-field.cmake  grok16-profile-hostess-secure.cmake  grok16-profile-single-fabric.cmake  grok16-profile-vulkan.cmake  grok16-profile-znetwork_wire.cmake  grok16-rtx-gate.cmake  grok16-thermal-guard.cmake
data/: field-exec-uncompiled-doctrine.json  field-programming-filetypes.json  field-thermal-doctrine.json  g16-always-optimal-doctrine.json  g16-always-optimal-panel.json  g16-ammocode-field-doctrine.json  g16-chips-compiler-doctrine.json  g16-compile-combinatronics-doctrine.json  g16-compile-receipt.jsonl  g16-field-combinatorics-doctrine.json  g16-field-research-book-panel.json  g16-field-research-book.json  g16-field-sanity-doctrine.json  g16-iron-plate-doctrine.json  g16-ironclad-meld.json  g16-ironclad-sanity.json  g16-linker-doctrine.json  g16-linker-toolchain.json  g16-no-field-files-doctrine.json  g16-power-sort-bench.json  g16-power-sort-doctrine.json  g16-power-sort-panel.json  g16-rtx-gate.json  g16-sealed-output-doctrine.json  g16-stack-fabric-doctrine.json  g16-truth-blocks-doctrine.json  g16-universal-compilers.json  gcc-source.json  (+35 more)
examples/ai-matrix-bench/: CMakeLists.txt  ai-matrix-bench.launch  matrix_bench.cpp
examples/ammoos-smoke/: CMakeLists.txt  ammoos-smoke.launch  ammoos_smoke.c
examples/field-canvas-kernel/: CMakeLists.txt  field-canvas-kernel.launch  field_dispatch.cpp
examples/field-nexus-bench/: CMakeLists.txt  field-nexus-bench.launch  field_nexus_bench.cpp
examples/speed-demo/: CMakeLists.txt  speed-demo.launch  speed_demo.c  speed_demo.cpp  speed_demo.py
(+529 files in other folders)
