cmake_minimum_required(VERSION 3.16)
project(ammoos_smoke C CXX)
set(CMAKE_C_STANDARD 17)
set(CMAKE_CXX_STANDARD 26)
if(NOT GROK16_PROFILE)
  set(GROK16_PROFILE "ammoos")
endif()
if(EXISTS "${CMAKE_CURRENT_LIST_DIR}/../../cmake/grok16-profile-ammoos.cmake")
  include("${CMAKE_CURRENT_LIST_DIR}/../../cmake/grok16-profile-ammoos.cmake")
endif()
add_executable(ammoos_smoke ammoos_smoke.c)