cmake_minimum_required(VERSION 3.20)
project(grok16_speed_demo CXX)

option(GROK16_HOST_PLANE "Host g++ plane (no g16 profile flags)" OFF)

if(GROK16_HOST_PLANE)
  set(CMAKE_CXX_STANDARD 20)
  add_compile_options(-O2 -march=native -fPIE)
  add_link_options(-pie)
else()
  set(CMAKE_CXX_STANDARD 23)
  if(EXISTS "${CMAKE_CURRENT_LIST_DIR}/../../cmake/grok16-profile-belt-2.cmake")
    include("${CMAKE_CURRENT_LIST_DIR}/../../cmake/grok16-profile-belt-2.cmake")
  elseif(EXISTS "${CMAKE_CURRENT_LIST_DIR}/../../cmake/grok16-profile-field-opt.cmake")
    include("${CMAKE_CURRENT_LIST_DIR}/../../cmake/grok16-profile-field-opt.cmake")
  endif()
endif()

add_executable(grok16_speed_demo speed_demo.cpp)
if(GROK16_HOST_PLANE)
  target_compile_definitions(grok16_speed_demo PRIVATE TOOLCHAIN_TAG="cmake_host_o2")
else()
  target_compile_definitions(grok16_speed_demo PRIVATE TOOLCHAIN_TAG="cmake_belt_2_0")
endif()
if(COMMAND g16_ironclad_sanity_meld)
  g16_ironclad_sanity_meld(grok16_speed_demo)
endif()